email and stuff

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 --------------------------------------------------------------*/
 
 body {
-  background: #ffffff;
+  background: #F4F1E6;
   background-image: url('../img/paper.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -19,25 +19,6 @@ a:hover, a:active, a:focus {
   color: #fff;
   outline: none;
   text-decoration: none;
-}
-
-/* QUACK */
-
-@keyframes scale-img-down-in {
-  from { transform: scale(1); }
-  to { transform: scale(0.8); }
-}
-@keyframes scale-img-down-out {
-  from { transform: scale(0.8); }
-  to { transform: scale(1.0); }
-}
-@keyframes scale-text-up-in {
-  from { transform: scale(1); }
-  to { transform: scale(1.1); }
-}
-@keyframes scale-text-up-out {
-  from { transform: scale(1.1); }
-  to { transform: scale(1); }
 }
 
 .footer-a {
@@ -59,8 +40,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "American Typewriter", sans-serif;
   font-weight: 400;
   color: #8D0000;
-  /* margin: 0 0 20px 0; */
-  padding: 0;
+  padding-left: 10px;
+  padding-top: 20px;
 }
 
 /*--------------------------------------------------------------
@@ -129,23 +110,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@-ms-keyframes "blink" {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: #8D0000;
-  }
-}
-
-@-o-keyframes "blink" {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: #8D0000;
-  }
-}
 
 /*--------------------------------------------------------------
 # Footer
